# pwutils

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  read_example.cpp  report_example.cpp
examples/data/: SQ_T_0_sig.txt  T_0.json
include/pwutils/: pwconstants.h  pwdefs.h  pwexcept.h  pwindexing.hpp  pwmath.h  pwmath.hpp  pwstats.h  pwstrings.h  pwthreads.h
include/pwutils/read/: dat.hpp  json.hpp  readdat.h  readdat.hpp  readfile.h  readjson.h  readjson.hpp
include/pwutils/report/: basedata.hpp  basereport.h  basetrack.hpp  dat.h  dat.hpp  dataio.h  dataio.hpp  json.h  json.hpp  pwdir.h  reportbase.h  reportdata.h  reporthelper.h  trackbase.h  trackbase.hpp  vbreportbase.h
scripts/: build.sh
src/: CMakeLists.txt  pwmath.cpp  pwstats.cpp  pwstrings.cpp  pwthreads.cpp
src/read/: dat.cpp  json.cpp  readdat.cpp  readfile.cpp  readjson.cpp
src/report/: basereport.cpp  basetrack.cpp  dat.cpp  dataio.cpp  json.cpp  pwdir.cpp  readdat.cpp  reportdata.cpp  reporthelper.cpp  trackbase.cpp  vbreportbase.cpp
test/: CMakeLists.txt  math_test.cpp  mytest.cpp  read_test.cpp  report_test.cpp  string_test.cpp  test.cpp
test/data/: CMakeLists.txt  T_0.txt
